--- a/public/index.css
+++ b/public/index.css
@@ -8,6 +8,11 @@ body {
   padding: 0;
 }
 
+#nav {
+  margin: 0;
+  padding: 0;
+}
+
 #navbar {
   display: grid;
   grid-column: 1/-1;
@@ -27,7 +32,7 @@ body {
   padding: 0;
 }
 
-h1 {
+h3 {
   color: black;
 }
 
@@ -93,3 +98,41 @@ svg {
   text-align: center;
 }
 
+
+ul {
+  list-style-type: none;
+} 
+
+li {
+  float: left;
+}
+
+.navObj {
+  user-select: none;
+  margin-left: 15px;
+  font-size: 16px;
+}
+
+.navLogin {
+  user-select: none;
+  margin-right: 15px;
+  font-size: 16px;
+  float: right;
+}
+.navLogout {
+  user-select: none;
+  margin-right: 15px;
+  font-size: 16px;
+  float: right;
+}
+
+.navTitle {
+  font-weight: bold;
+  user-select: none;
+  margin-right: 30px;
+  font-size: 20px;
+}
+
+.container {
+  margin-top: 20px;
+}
