--- a/public/index.css
+++ b/public/index.css
@@ -98,10 +98,9 @@ svg {
   text-align: center;
 }
 
-
 ul {
   list-style-type: none;
-} 
+}
 
 li {
   float: left;
@@ -113,11 +112,11 @@ li {
   font-size: 16px;
 }
 
-.navLogin {
+.Login {
   user-select: none;
   margin-right: 15px;
   font-size: 16px;
-  float: right;
+  float: center;
 }
 .navLogout {
   user-select: none;
