--- a/public/index.css
+++ b/public/index.css
@@ -1,137 +1,9 @@
-body {
-  margin: 0;
-  padding: 0;
-}
-
+html,
+body,
+#app,
 #root {
   margin: 0;
   padding: 0;
-}
-
-#nav {
-  margin: 0;
-  padding: 0;
-}
-
-#navbar {
-  display: grid;
-  grid-column: 1/-1;
-  grid-row: 1;
-  background-color: grey;
-  color: white;
-  margin: 0;
-  padding: 10px;
-  overflow: hidden;
-  align-content: center;
-}
-
-#app {
-  grid-column: 1/-1;
-  grid-row: 2;
-  margin: 0;
-  padding: 0;
-}
-
-h3 {
-  color: black;
-}
-
-#root {
-  display: grid;
-  grid-template-rows: 4em 1fr;
-  grid-template-columns: minmax(1em, 1fr);
-  height: 100vh;
-  width: 100vw;
-  margin: 0;
-}
-
-.contextMenu {
-  position: absolute;
-  z-index: 100;
-}
-
-/* svg {
-  position: absolute;
-} */
-
-/* .linkSVG {
-  stroke: #000;
-  fill: #000;
-} */
-
-/* .linkLabel {
-  text-anchor: middle;
-  fill: #000;
-  font-size: 12px;
-} */
-
-/* .nodeLabel {
-  text-anchor: middle;
-  fill: #000;
-  font-size: 12px;
-} */
-
-/* .node {
-  stroke-width: 0;
-} */
-
-.menu {
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(161, 108, 108);
-  color: white;
-  border-radius: 10px;
-  box-shadow: 0 10px 20px rgb(64 64 64 / 5%);
-  padding: 10px;
-  list-style-type: none; /* Remove bullets */
-  margin: 0;
-}
-
-.menu .item:hover {
-  color: red;
-  cursor: pointer;
-}
-
-.container {
-  margin: auto;
-  width: 25%;
-  text-align: center;
-}
-
-ul {
-  list-style-type: none;
-}
-
-li {
-  float: left;
-}
-
-.navObj {
-  user-select: none;
-  margin-left: 15px;
-  font-size: 16px;
-}
-
-.Login {
-  user-select: none;
-  margin-right: 15px;
-  font-size: 16px;
-  float: center;
-}
-.navLogout {
-  user-select: none;
-  margin-right: 15px;
-  font-size: 16px;
-  float: right;
-}
-
-.navTitle {
-  font-weight: bold;
-  user-select: none;
-  margin-right: 30px;
-  font-size: 20px;
-}
-
-.container {
-  margin-top: 20px;
+  height: 100%;
+  width: 100%;
 }
