Feature: create configObj WIP

--- a/public/index.css
+++ b/public/index.css
@@ -7,3 +7,8 @@ body,
   height: 100%;
   width: 100%;
 }
+
+.linkLabel {
+  text-shadow: 0 0 2px white, 0 0 2px white, 0 0 2px white, 0 0 2px white,
+    0 0 2px white, 0 0 2px white, 0 0 2px white, 0 0 2px white;
+}
