--- a/public/index.css
+++ b/public/index.css
@@ -4,9 +4,11 @@ body,
 #root {
   margin: 0;
   padding: 0;
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
+  height: 100vh;
+  width: 100vw;
+}
+#app{
+  height: 95vh;
 }
 
 .linkLabel {
